k8s/etudiant-service.yaml
# =====================================================================
# ETUDIANT-SERVICE – Stable Local Configuration
# =====================================================================
apiVersion: v1
kind: Service
metadata:
  name: etudiant-service
  namespace: microservices
  labels:
    app: etudiant-service
spec:
  type: ClusterIP
  selector:
    app: etudiant-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etudiant-service
  namespace: microservices
  labels:
    app: etudiant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etudiant-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: etudiant-service
    spec:
      containers:
        - name: etudiant-service
          image: radrienfranto1/etudiant-service:1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: etudiant-images
              mountPath: /app/uploads/images
      volumes:
        - name: etudiant-images
          persistentVolumeClaim:
            claimName: etudiant-images-pvc
