k8s/frontend-react.yaml
# =====================================================================
# FRONTEND-REACT – Production HA + Load Balancing + Haute Performance
# replicas: 2 | ClusterIP | probes | resources | topologySpread | priority
# BackendConfig : timeout 30s + health check /
# =====================================================================
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
  namespace: microservices
  labels:
    app: frontend-react
spec:
  type: ClusterIP
  selector:
    app: frontend-react
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  namespace: microservices
  labels:
    app: frontend-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      priorityClassName: normal-priority-frontend
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: frontend-react
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: frontend-react
                topologyKey: kubernetes.io/hostname
      containers:
        - name: frontend-react
          image: radrienfranto1/frontend-react:1.0
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 5
