k8s/travail-service.yaml
# =====================================================================
# TRAVAIL-SERVICE – Stable Local Configuration
# =====================================================================
apiVersion: v1
kind: Service
metadata:
  name: travail-service
  namespace: microservices
  labels:
    app: travail-service-service
spec:
  type: ClusterIP
  selector:
    app: travail-service
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travail-service
  namespace: microservices
  labels:
    app: travail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travail-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: travail-service
    spec:
      containers:
        - name: travail-service
          image: radrienfranto1/travail-service:1.0
          ports:
            - containerPort: 8082
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
